--- a/packages/pq-account/js/minimal.html
+++ b/packages/pq-account/js/minimal.html
@@ -333,7 +333,7 @@ const FACTORY_ABI = [
 
 // ── INSTALL APP ──
 
-const APDU_URL = './app.apdu';
+const APDU_URL = './app.txt';
 
 function parseApduFile(text) {
     return text.replace(/\r/g, '').split('\n')
