--- a/packages/pq-account/js/minimal.html
+++ b/packages/pq-account/js/minimal.html
@@ -269,12 +269,9 @@
 
     <div class="card">
 
-        <iframe
-            src="http://localhost:3001/sideloader.html?embed=true"
-            style="width:100%; height:52px; border:none; display:block; overflow:hidden;"
-            scrolling="no"
-            allow="hid"
-        ></iframe>
+        <p style="font-size: 13px; color: var(--text-dim); margin-bottom: 4px;">
+            Install Ledger App from <a href="https://zknox.com/zknox-orange/sideloader" target="_blank" rel="noopener" style="color: var(--orange); text-decoration: underline; text-underline-offset: 3px;">ZKNOX Orange</a>
+        </p>
         <div class="status" id="statusInstall"></div>
 
         <hr class="divider">
@@ -317,8 +314,6 @@ import {
     updateUserOpWithGasEstimates, submitUserOperation, ENTRY_POINT_ADDRESS
 } from './userOperation.js';
 import deployments from './deployments/deployments.json' assert { type: 'json' };
-const { TransportWebHID } = await import(/* @vite-ignore */ '/public/vendor/ledgerjs_bundle.js');
-
 const RPC      = 'https://eth-sepolia-testnet.api.pocket.network';
 const CHAIN_ID = 11155111n;
 const BIP_PATH = "m/44'/60'/0'/0/0";
